# money-manager

./: .env.example  Cargo.toml  clean-architecture.md  docker-compose.yml
migrations/: 20260619142715_init_db.sql
src/: lib.rs  main.rs
src/application/auth/register/: command.rs  error.rs  mod.rs  usecase.rs
src/bootstrap/: app.rs
src/config/: app.rs  database.rs  error.rs  mod.rs
src/domain/: mod.rs
src/domain/crypto/: error.rs  hasher.rs  mod.rs
src/domain/persistence/: error.rs
src/domain/user/: entity.rs  error.rs  mod.rs  repository.rs  value_object.rs
src/infrastructure/: mod.rs
src/infrastructure/crypto/: hasher.rs
src/infrastructure/database/: error.rs  mod.rs  pool.rs
src/infrastructure/repositories/: user.rs
src/presentation/: error.rs  mod.rs  state.rs
src/presentation/docs/: openapi.rs
src/presentation/dto/: auth.rs
src/presentation/handlers/: auth.rs
src/presentation/middleware/: mod.rs  request_context.rs  request_id.rs
src/presentation/routes/: auth.rs
src/shared/: logger.rs  mod.rs  response.rs
