[package]
name = "money_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "^0.5.3", features = ["rand"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"
